# folio

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: STATUS.md
.github/workflows/: ci.yml
docs/: spec.md
src/: lib.rs  main.rs  parser.rs  serialiser.rs  types.rs
src/commands/: add.rs  check.rs  mod.rs
src/infrastructure/: args.rs  clock.rs  filesystem.rs  mod.rs  output.rs  prompt.rs
tests/: add_command.rs  check_command.rs  integration.rs  parse_transaction.rs
