[package]
name = "folio"
version = "0.1.0"
edition = "2024"

[lib]
name = "folio"
path = "src/lib.rs"

[[bin]]
name = "folio"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
rust_decimal = "1"
